--- a/docs/tutorial-basics/mall-help/_category_.yml
+++ b/docs/tutorial-basics/mall-help/_category_.yml
@@ -1,2 +1,5 @@
-position: 1 # float position is supported
+position: 2 # float position is supported
 label: '疑难杂症'
+link:
+  type: doc
+  id: "intro"
